--- a/theme.scss
+++ b/theme.scss
@@ -2,6 +2,7 @@
 
 /*-- scss:defaults --*/
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@800&family=Roboto&display=swap');
 
 // Colors
 $navy: #34414E;
@@ -16,6 +17,8 @@ $green: #8abbbb;
 $yellow: #FFBC2F;
 $violet: #B0B6D9;
 $pretty: #ecc9d0;
+$choc: #50342b;
+$teal-gray: #3E5058;
 
 // Base document colors
 $navbar-bg: $pretty; // navbar
@@ -28,7 +31,7 @@ $link-color: $pink; // hyperlinks
 
 // fonts
 
-$font-family: 'Helvetica';
+$font-family: 'Roboto', sans-serif;
 
 //toc 
 $toc-font-size: 12px;
@@ -46,7 +49,7 @@ $callout-color-important: $yellow;
   margin-top: 2em !important;
   margin-bottom: 1.5em;
   font-size: 28px;
-  font-family: $font-family;
+  font-family: 'Nunito', sans-serif;
   font-weight: 500;
 }
 
@@ -68,33 +71,37 @@ body {
 /* Heading 1 */
 h1 {
   font-size: 24px;
-  font-family: $font-family;
+  font-family: 'Nunito', sans-serif;
   font-variant: normal; 
   font-weight: 500; 
+  color: $teal-gray;
 }
 
 /* Heading 2 */
 h2 {
   font-size: 21px;
-  font-family: $font-family;
+  font-family: 'Nunito', sans-serif;
   font-variant: normal; 
   font-weight: 500; 
+  color: $teal-gray;  
 }
 
 /* Heading 3 */
 h3 {
   font-size: 18px;
-  font-family: $font-family;
+  font-family: 'Nunito', sans-serif;
   font-variant: normal; 
   font-weight: 500; 
+  color: $teal-gray;  
 }
 
 /* Heading 4 */
 h4 {
   font-size: 16px;
-  font-family: $font-family;
-  font-variant: normal; 
+  font-family: 'Nunito', sans-serif;
+  font-variant: italic; 
   font-weight: 500; 
+  color: $teal-gray;  
 }
 
 .callout.callout-style-default .callout-body {
