--- a/theme.scss
+++ b/theme.scss
@@ -40,6 +40,7 @@ $code-block-bg: white;
 
 // fonts
 $font-family: 'Roboto', sans-serif;
+$font-family2: 'Nunito', sans-serif;
 
 // toc 
 $toc-font-size: 12px;
@@ -59,7 +60,7 @@ $callout-color-important: $yellow;
   margin-top: 2em !important;
   margin-bottom: 1.5em;
   font-size: 28px;
-  font-family: 'Nunito', sans-serif;
+  font-family: $font-family2;
   font-weight: 500;
 }
 
@@ -72,7 +73,7 @@ body {
 /* Heading 1 */
 h1 {
   font-size: 24px;
-  font-family: 'Nunito', sans-serif;
+  font-family: $font-family2;
   font-variant: normal; 
   font-weight: 500; 
   color: $teal-gray;
@@ -81,7 +82,7 @@ h1 {
 /* Heading 2 */
 h2 {
   font-size: 21px;
-  font-family: 'Nunito', sans-serif;
+  font-family: $font-family2;
   font-variant: normal; 
   font-weight: 500; 
   color: $teal-gray;  
@@ -90,7 +91,7 @@ h2 {
 /* Heading 3 */
 h3 {
   font-size: 18px;
-  font-family: 'Nunito', sans-serif;
+  font-family: $font-family2;
   font-variant: normal; 
   font-weight: 500; 
   color: $teal-gray;  
@@ -99,7 +100,7 @@ h3 {
 /* Heading 4 */
 h4 {
   font-size: 16px;
-  font-family: 'Nunito', sans-serif;
+  font-family: $font-family2;
   font-variant: italic; 
   font-weight: 500; 
   color: $teal-gray;  
